--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -46,7 +46,6 @@
 }
 
 .student-profile, .point-tracker-modal {
-  overflow: scroll;
 
   span {
     display: block;
